--- a/analise_de_risco.ipynb
+++ b/analise_de_risco.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPO4x5bwwe/sAoPnwDacwEG",
+      "authorship_tag": "ABX9TyM2+gIRwcUvdnf8MFZEspVi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -884,7 +884,9 @@
     {
       "cell_type": "code",
       "source": [
-        "#na descrição de vendas por comerciante, podemos ver pelos quartis que grande parte deles só realizou uma venda, essa é uma informação importante pra reforçar a necessidade de ter uma amostra maior ao considerar as classificações de risco."
+        "#na descrição de vendas por comerciante, podemos ver pelos quartis que grande parte deles só realizou uma venda,\n",
+        "#essa é uma informação importante pra reforçar a necessidade de ter uma amostra maior ao considerar as classificações\n",
+        "#de risco."
       ],
       "metadata": {
         "id": "o0c-dnZqoXmf"
@@ -933,7 +935,8 @@
       "cell_type": "code",
       "source": [
         "#Verificando a porcentagem de ChargeBacks por lojista\n",
-        "#Uma forma pertinente de classificação de risco é verificar a proporção de chargebacks por venda para cada lojista, a partir desses dados podemos montar um modelo que faça a classificação de risco."
+        "#Uma forma pertinente de classificação de risco é verificar a proporção de chargebacks por venda para cada lojista,\n",
+        "#a partir desses dados podemos montar um modelo que faça a classificação de risco."
       ],
       "metadata": {
         "id": "3uF7EehTofWW"
@@ -1396,7 +1399,8 @@
     {
       "cell_type": "code",
       "source": [
-        "#Analisando a tabela e o gráfico, podemos verificar que 56% dos comerciantes que já tiveram algum chargeback, o tiveram em 100% das suas vendas.\n",
+        "#Analisando a tabela e o gráfico, podemos verificar que 56% dos comerciantes que já tiveram algum chargeback,\n",
+        "#o tiveram em 100% das suas vendas.\n",
         "\n",
         "#Com o já explorado até aqui, podemos partir para a elaboração de um modelo de classificação de risco."
       ],
@@ -1409,52 +1413,33 @@
     {
       "cell_type": "code",
       "source": [
-        "\"\"\"Modelo de classificação de risco\n",
-        "Regras do modelo:\n",
+        "#Modelo de classificação de risco\n",
+        "#Regras do modelo:\n",
         "\n",
-        "Comerciantes com 100% das vendas à primeira vista têm alta possibilidade de estarem envolvidos em algum tipo de fraude, porém um fator que não podemos deixar de considerar é o tamanho da amostra, por exemplo, comerciantes que tiveram apenas uma venda e um chargeback não podem ter o mesmo grau de risco que comerciantes que tiveram quinze vendas e quinze chargebacks.\n",
+        "#Comerciantes com 100% das vendas à primeira vista têm alta possibilidade de estarem envolvidos em algum tipo de fraude, porém um fator que não podemos deixar de considerar é o tamanho da amostra, por exemplo, comerciantes que tiveram apenas uma venda e um chargeback não podem ter o mesmo grau de risco que comerciantes que tiveram quinze vendas e quinze chargebacks.\n",
         "\n",
-        "Caso o comerciante tenha 100% de suas vendas acometidas de chargeback:\n",
-        "2 ou menos vendas - baixo risco (1)\n",
-        "3 a 5 vendas - médio risco (2)\n",
-        "6 ou mais vendas - alto risco (3)\n",
-        "A sabedoria dos antigos diz que 'para uma mentira ser boa, esta deve estar floreada com um pouco de verdade', os bons fraudadores entendem isso bem, então muitos deles vão realizar algumas transações legítimas para não serem identificados tão facilmente. Assim sendo, será comum nos depararmos com fraudadores que não tenham 100% de compras com Chargeback.\n",
-        "Como a porcentagem de chargebacks sobre as compras diminuiu, aumentaremos em 1 o número de compras necessárias para progressão de zona de risco em relação a comerciantes com 100% de chargeback\n",
+        "#Caso o comerciante tenha 100% de suas vendas acometidas de chargeback:\n",
+        "#2 ou menos vendas - baixo risco (1)\n",
+        "#3 a 5 vendas - médio risco (2)\n",
+        "#6 ou mais vendas - alto risco (3)\n",
+        "#A sabedoria dos antigos diz que 'para uma mentira ser boa, esta deve estar floreada com um pouco de verdade', os bons fraudadores entendem isso bem, então muitos deles vão realizar algumas transações legítimas para não serem identificados tão facilmente. Assim sendo, será comum nos depararmos com fraudadores que não tenham 100% de compras com Chargeback.\n",
+        "#Como a porcentagem de chargebacks sobre as compras diminuiu, aumentaremos em 1 o número de compras necessárias para progressão de zona de risco em relação a comerciantes com 100% de chargeback\n",
         "\n",
-        "Caso o comerciante tenha de 50% a 99% de suas vendas acometidas de chargeback:\n",
+        "#Caso o comerciante tenha de 50% a 99% de suas vendas acometidas de chargeback:\n",
         "\n",
-        "3 ou menos vendas - baixo risco (1)\n",
-        "4 a 6 vendas - médio risco (2)\n",
-        "7 ou mais vendas - alto risco (3)\n",
+        "#3 ou menos vendas - baixo risco (1)\n",
+        "#4 a 6 vendas - médio risco (2)\n",
+        "#7 ou mais vendas - alto risco (3)\n",
         "\n",
-        "Caso o comerciante tenha menos de 50% das vendas acometidas de chargeback, podemos considerá-lo baixo risco (1).\n",
+        "#Caso o comerciante tenha menos de 50% das vendas acometidas de chargeback, podemos considerá-lo baixo risco (1).\n",
         "\n",
-        "Se o comerciante não tiver histórico de chargeback, o consideraremos o risco nulo (0).\"\"\""
+        "#Se o comerciante não tiver histórico de chargeback, o consideraremos o risco nulo (0)."
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 174
-        },
-        "id": "lHPt9Xg0o8A5",
-        "outputId": "50a4ebfd-5df5-4e72-f6c8-3b56667be8d8"
+        "id": "lHPt9Xg0o8A5"
       },
-      "execution_count": 28,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "\"Modelo de classificação de risco\\nRegras do modelo:\\n\\nComerciantes com 100% das vendas à primeira vista têm alta possibilidade de estarem envolvidos em algum tipo de fraude, porém um fator que não podemos deixar de considerar é o tamanho da amostra, por exemplo, comerciantes que tiveram apenas uma venda e um chargeback não podem ter o mesmo grau de risco que comerciantes que tiveram quinze vendas e quinze chargebacks.\\n\\nCaso o comerciante tenha 100% de suas vendas acometidas de chargeback:\\n2 ou menos vendas - baixo risco (1)\\n3 a 5 vendas - médio risco (2)\\n6 ou mais vendas - alto risco (3)\\nA sabedoria dos antigos diz que 'para uma mentira ser boa, esta deve estar floreada com um pouco de verdade', os bons fraudadores entendem isso bem, então muitos deles vão realizar algumas transações legítimas para não serem identificados tão facilmente. Assim sendo, será comum nos depararmos com fraudadores que não tenham 100% de compras com Chargeback.\\nComo a porcentagem de chargebacks sobre as compras diminuiu, aumentaremos em 1 o número de compras necessárias para progressão de zona de risco em relação a comerciantes com 100% de chargeback\\n\\nCaso o comerciante tenha de 50% a 99% de suas vendas acometidas de chargeback:\\n\\n3 ou menos vendas - baixo risco (1)\\n4 a 6 vendas - médio risco (2)\\n7 ou mais vendas - alto risco (3)\\n\\nCaso o comerciante tenha menos de 50% das vendas acometidas de chargeback, podemos considerá-lo baixo risco (1).\\n\\nSe o comerciante não tiver histórico de chargeback, o consideraremos o risco nulo (0).\""
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 28
-        }
-      ]
+      "execution_count": 33,
+      "outputs": []
     },
     {
       "cell_type": "code",
